--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://alberto.github.com
+url: http://www.sharpbites.com
 title: sharp bites
 subtitle: standing on the shoulders of giants
 author: alberto
