--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ disqus_short_name: sharpbites
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-3088208-4
 
 # Facebook Like
 facebook_like: false
